# birthday-stranger-v3

./: .gitignore  CNAME  Cargo.toml  Dioxus.toml  README.md  clippy.toml  index.html
.github/workflows/: deploy.yml
assets/: birthday-stranger-v3-079a91468ce8f8d6.js  birthday-stranger-v3-079a91468ce8f8d6.js.br  birthday-stranger-v3-b7906fdc823e8b6e.js  birthday-stranger-v3-b7906fdc823e8b6e.js.br  birthday-stranger-v3_bg-252783b4f0435e79.wasm  birthday-stranger-v3_bg-252783b4f0435e79.wasm.br  birthday-stranger-v3_bg-271aeb7c2f0c54d3.wasm  birthday-stranger-v3_bg-271aeb7c2f0c54d3.wasm.br  birthday-stranger-v3_bg-8fe3bbaaf8694764.wasm  birthday-stranger-v3_bg-8fe3bbaaf8694764.wasm.br  birthday-stranger-v3_bg-985329bd39d41f42.wasm  birthday-stranger-v3_bg-985329bd39d41f42.wasm.br  birthday-stranger-v3_bg-af1cfb57ad3acbaa.wasm  birthday-stranger-v3_bg-af1cfb57ad3acbaa.wasm.br  favicon.ico.br  happy-birthdayv3-29f0c37076ebd106.js  happy-birthdayv3-29f0c37076ebd106.js.br  happy-birthdayv3_bg-287fd42ea17ee569.wasm  happy-birthdayv3_bg-287fd42ea17ee569.wasm.br  happy-birthdayv3_bg-3d8bde605a23c8bc.wasm  happy-birthdayv3_bg-3d8bde605a23c8bc.wasm.br
assets/fonts/: Komigo3D-Regular.ttf.br
assets/styling/: main.css
public/: index.html
public/assets/: banner-14d201f9c472b29a.png.br  main-c7eef8dc019f48e3.css.br
public/assets/styling/: main.css
src/: main.rs
src/components/: hero.rs
src/views/: mod.rs
