[package]
name = "happy-birthdayv3"
version = "0.1.0"
authors = ["Velocifer-in <85669713+velocifer-in@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
web-sys = { version = "0.3.77", features = ["Url", "UrlSearchParams", "default", "CssStyleDeclaration", "AddEventListenerOptions", "EventTarget"] }
gloo-utils = "0.2.0"
gloo-timers = "0.3.0"
wasm-bindgen = "0.2.100"
fastrand = "2.3.0"

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
